# qa_guru_7_21

./: .env.bstack  .env.local_real  config.py  pyproject.toml  requirements.txt  utils.py
allure-results/: 258b0b72-8e4f-4d45-9c7f-16d9790fd43a-result.json  3c2f3a41-22cb-43cc-aa71-72731eae4b4f-container.json  540d35d5-2970-491f-9fe1-5dd134556ef8-container.json  63300040-8efe-4aee-a8d2-9171e75d0da1-result.json
tests/: conftest.py
tests/allure-results/: 0a3bc2ab-b2a8-4515-a395-38f0b8c4b630-result.json  2d5c4f70-e18a-46dc-a027-31f3e6c7f63d-container.json  8d1d961d-962a-4940-994e-905570f952b8-container.json  e51c19f2-102d-42ca-84d6-a6dea3edfc66-attachment.xml
tests/android/: test_wiki_android.py
tests/mobile/: conftest.py
tests/mobile/android/: test_wiki_android.py
tests/mobile/ios/: test_wiki_ios.py
